# InterGATE

./: CITATION.cff  LICENSE  LICENSE-CC-BY-4.0.md  Makefile  README.md  REFERENCES.bib  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
data/: README.md
docs/: BACKBONE_ABLATION.md  InterGATE_main_revised_backbone_ablation_corrected.tex  InterGATE_supplementary_revised_backbone_ablation_corrected.tex  REPRODUCIBILITY_CHECKLIST.md  backbone_ablation_meta.json  backbone_ablation_results.csv  backbone_ablation_summary.csv
examples/toy_data/: README.md  expr_toy.csv  metadata_toy.csv  prior_edges_toy.tsv
intergate/: __init__.py  ablation.py  axes.py  backbone_ablation.py  backbone_blocks.py  benchmarks.py  benchmarks_gnn_baselines.py  bootstrap.py  config.py  data.py  enrichment.py  graph.py  graph_cache.py  losses.py  model.py  postprocessing.py  pruning.py  stability.py  training.py  utils.py  visualization.py
notebooks/: 0_Main_Pipeline.ipynb  1_Results_Bootstrap.ipynb  2_Ejes_REFINED_AXES.ipynb  3_Ejes_Figura_residuales.ipynb  4_Lista_genes_por_eje.ipynb  5_Bioinformatics_Benchmarks.ipynb  6_Benchmarks_SOTA.ipynb  7_Backbone_Ablation.ipynb
scripts/: 00_check_setup.py  01_smoke_test.py  02_run_toy_example.py  download_zenodo_data.py  run_backbone_ablation.sh  run_notebooks.sh
